--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,25 @@
 body{
-    background-color: #00688B
-    ;
+    background-color: #00688B;
+
+}
+.background{
+    display: inline-block;
+    width: 100%;
+    background-image: url(../jpg/pav.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    filter: blur(15px);
+    height: 100vh;
+
 }
 .container {
     display: inline-block;
     width: 800px;
-    background-color: aqua;
-    margin-left: calc((100% - 800px) / 2);
-    margin-top: 100px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .left-colom{
     display: inline-block;
@@ -15,6 +27,14 @@ body{
     float: left;
     padding: 40px;
     color: white;
+    position: absolute;
+    top: 30px;
+    bottom: 30px;
+    background-image: url(../jpg/pav.jpg);
+    background-repeat: no-repeat;
+    background-color: blue;
+    background-size: cover;
+    background-position: center bottom;
 }
 
 
@@ -22,29 +42,30 @@ body{
     display: inline-block;
     width: 100%;
 }
-.bootom-links{
-    
+.bottom-links{
     display: inline-block;
-    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
 }
-.bootom-links > .symbol {
+.symbol {
     display: inline-block;
 }
    
-.bootom-links > .link{
+.bottom-links > .link{ 
     display: inline-block;
     color: white;
 }
 .right-colom{
     display: inline-block;
     width: 60%;
-    
     background-color:white;
     padding: 60px;
 position: relative;
+float: right;
 }
 .close{
-    background-color: red;
     float: right ;
     display: inline-block;
     width: 60px;
@@ -54,7 +75,7 @@ position: relative;
    right: 0px;
    text-align: center;
    font-size: 30px;
-   line-height: 60px;
+   line-height: 54px;
 }
 .form{
     display: inline-block;
@@ -83,6 +104,7 @@ input{
    border-bottom: 1px solid #F6F6F6;
    margin-top: 10px;
    line-height: 20px;
+   font-size: 14px;
 
 }
 .btn{
@@ -102,15 +124,14 @@ input{
 .btn:hover{
     background-color: violet;
 }
-.symbol{
+.text{
     display: inline-block;
-    line-height: 40px;
+    line-height: 20px;
     font-size: 18px;
     padding: 10px;
-    line-height: 20px;
-    margin-left: 10px;
+  text-decoration: none;
 }
-.link{
+.linkSingin{
     display: inline-block;
     line-height: 40px;
     font-size: 18px;
